# BootcampAula20_CRUD

./: README.md  docker-compose.yml  pyproject.toml
