[tool.poetry]
name = "aula20-1"
version = "0.1.0"
description = ""
authors = ["Fasri <felipear@gmail.com>"]
readme = "README.md"
packages = [{include = "aula20"}]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.6"
pydantic = "^2.10.3"
uvicorn = {extras = ["standard"], version = "^0.32.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
